// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scheduler should handle valid requests outside of reservation window 1`] = `
{
  "scheduledReservation": {
    "reservation": {
      "booked": false,
      "dateRange": {
        "end": {
          "$D": 16,
          "$H": 1,
          "$L": "en",
          "$M": 0,
          "$W": 0,
          "$d": {},
          "$m": 15,
          "$ms": 0,
          "$s": 0,
          "$x": {},
          "$y": 2022,
        },
        "start": {
          "$D": 16,
          "$H": 1,
          "$L": "en",
          "$M": 0,
          "$W": 0,
          "$d": {},
          "$m": 0,
          "$ms": 0,
          "$s": 0,
          "$x": {},
          "$y": 2022,
        },
      },
      "opponent": {
        "id": "123",
        "name": "collin",
      },
      "possibleDates": [
        {
          "$D": 16,
          "$H": 1,
          "$L": "en",
          "$M": 0,
          "$W": 0,
          "$d": {},
          "$m": 0,
          "$ms": 0,
          "$s": 0,
          "$x": {},
          "$y": 2022,
        },
        {
          "$D": 16,
          "$H": 1,
          "$L": "en",
          "$M": 0,
          "$W": 0,
          "$d": {},
          "$m": 15,
          "$ms": 0,
          "$s": 0,
          "$x": {},
          "$y": 2022,
        },
      ],
      "user": {
        "password": Any<String>,
        "username": "collin",
      },
    },
    "scheduledFor": {
      "$D": 9,
      "$H": 0,
      "$L": "en",
      "$M": 0,
      "$W": 0,
      "$d": {},
      "$m": 0,
      "$ms": 0,
      "$s": 0,
      "$x": {},
      "$y": 2022,
    },
  },
}
`;

exports[`scheduler should handle valid requests within reservation window 1`] = `
{
  "scheduledReservation": {
    "reservation": {
      "booked": false,
      "dateRange": {
        "end": {
          "$D": 1,
          "$H": 1,
          "$L": "en",
          "$M": 0,
          "$W": 6,
          "$d": {},
          "$m": 30,
          "$ms": 0,
          "$s": 0,
          "$x": {},
          "$y": 2022,
        },
        "start": {
          "$D": 1,
          "$H": 1,
          "$L": "en",
          "$M": 0,
          "$W": 6,
          "$d": {},
          "$m": 15,
          "$ms": 0,
          "$s": 0,
          "$x": {},
          "$y": 2022,
        },
      },
      "opponent": {
        "id": "123",
        "name": "collin",
      },
      "possibleDates": [
        "2022-01-01T00:15:00.000Z",
        "2022-01-01T00:30:00.000Z",
      ],
      "user": {
        "password": Any<String>,
        "username": "collin",
      },
    },
  },
}
`;
